# moviechooser-api

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.preprod.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  init-letsencrypt.sh
app/: .coverage  .coveragerc  .dockerignore  .env.example  Dockerfile  Dockerfile.inst.prod  Dockerfile.local  Dockerfile.prod  conftest.py  entrypoint.prod.sh  manage.py  movies_data.json  pyproject.toml  pytest.ini
app/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  viewsets.py
app/accounts/migrations/: 0001_initial.py  0002_customuser_uid.py  0003_alter_customuser_email.py  0004_alter_customuser_username.py  0005_alter_customuser_username.py  0006_alter_customuser_managers.py
app/accounts/tests/: conftest.py  test_models.py  test_serializers.py  test_viewsets.py
app/auth/: serializers.py  urls.py  viewsets.py
app/auth/tests/: conftest.py  test_serializers.py  test_viewsets.py
app/authentication/: serializers.py  urls.py  utils.py  views.py  viewsets.py
app/authentication/tests/: conftest.py  test_serializers.py  test_views.py  test_viewsets.py
app/config/: asgi.py  celery.py  settings.py  urls.py  util.py  wsgi.py
app/config/settings/: base.py  dev.py  local.py  prod.py
app/lists/: models.py  serializers.py  urls.py  views.py
app/lists/migrations/: 0001_initial.py  0002_auto_20211129_2046.py  0002_item.py  0003_auto_20211127_2005.py
app/lists/tests/: test_models.py  test_serializers.py  test_views.py
app/moviechooser/: asgi.py  settings.py  urls.py  wsgi.py
app/movies/: admin.py  constants.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
app/movies/migrations/: 0001_initial.py  0002_auto_20210926_2103.py  0002_auto_20211002_0919.py  0002_genre.py  0002_review.py  0003_alter_movie_type_field_alter_review_source.py  0003_auto_20210926_2136.py  0003_auto_20210928_1648.py  0004_movie_avg_rating.py  0005_alter_review_movie.py  0006_remove_movie_avg_rating.py
app/movies/tests/: conftest.py  test_models.py  test_serializers.py  test_utils.py  test_views.py
app/movies/tests/factories/: __init__.py
nginx/: .env.example  Dockerfile  custom.conf  (+3 more)
nginx-conf/: nginx.conf
(+8 files in other folders)
