[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mattyocode"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.8"
djangorestframework = "3.15.1"
psycopg2-binary = "2.9.9"
gunicorn = "20.1.0"
whitenoise = "5.2.0"
django-cors-headers = "^3.10.0"
djangorestframework-simplejwt = "^5.0.0"
requests = "^2.31.0"
django-ses = "3.5.0"
redis = "^5.0.4"
celery = "^5.4.0"
django-filter = "^24.2"
pytest-env = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-django = "4.4.0"
pytest-factoryboy = "^2.1.0"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "24.3.0"
isort = "5.9.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output=3
include_trailing_comma=true